--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,9 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  height: 100vh;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: #e9e9e9;
   overflow-x: hidden;
@@ -12,74 +14,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 640px;
-  height: 100vh;
-  background-color: white;
-}
-
-.titleArea {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  gap: 5px;
-}
-
-.title {
-  font-size: 18px;
-  font-weight: 700;
-}
-
-.mazeContainer {
-  width: 300px;
-  height: 300px;
+  width: 375px;
+  height: 812px;
+  background-color: #cef1f8;
+  background-image: url("/assets/main_background.svg");
+  background-repeat: none;
   background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, 1fr);
-  border: 1px solid black;
-  margin-bottom: 50px;
 }
 
-.controlArea {
-  display: flex;
-  gap: 18px;
-}
-
-.stack {
-  width: 120px;
-  height: 200px;
-  background-color: lightgray;
-}
-
-.cardList {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-  width: 120px;
-  height: 200px;
-  background-color: lightgray;
-}
-
-.stack {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
-}
-
-.actionCard {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100px;
-  height: 30px;
-  font-size: 12px;
-  background-color: gray;
-  color: white;
+@media (max-width: 500px) {
+  .App {
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
+  }
 }
