--- a/app/play/style.css
+++ b/app/play/style.css
@@ -47,8 +47,40 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
-  /*border: 1px solid black;*/
+  /*border: 1px solid whitesmoke;*/
   margin-bottom: 50px;
+}
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow_start {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  top: -30px;
+}
+
+.arrow_finish {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  top: 30px;
+}
+
+.text_start {
+  position: relative;
+  top: -40px;
+  left: 10px;
+}
+
+.text_finish {
+  position: relative;
+  top: 40px;
+  left: -10px;
 }
 
 .controlArea {
