--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@ body {
   align-items: center;
   background-color: #e9e9e9;
   overflow-x: hidden;
+  overscroll-behavior: contain;
 }
 
 .App {
@@ -18,14 +19,29 @@ body {
   height: 812px;
   background-color: #cef1f8;
   background-image: url("/assets/main_background.svg");
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-position: center;
+}
+
+.btn_start {
+  position: relative;
+  top: 659px;
+  width: 216px;
+  height: 56px;
+  border: none;
+  background-color: #72c39d;
+  background-image: url("/assets/start.svg");
 }
 
 @media (max-width: 500px) {
   .App {
-    background-size: cover;
+    background-size: contain;
     width: 100vw;
     height: 100vh;
+  }
+
+  .btn_start {
+    position: relative;
+    top: 81vh;
   }
 }
