--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,16 @@
+html,
+body {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  width: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   display: flex;
-  height: 100vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -12,8 +20,11 @@ body {
 }
 
 .App {
+  position: fixed;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
   width: 375px;
   height: 812px;
@@ -24,24 +35,23 @@ body {
 }
 
 .btn_start {
-  position: relative;
-  top: 659px;
   width: 216px;
   height: 56px;
   border: none;
+  margin-bottom: 77px;
   background-color: #72c39d;
   background-image: url("/assets/start.svg");
+  cursor: pointer;
 }
 
 @media (max-width: 500px) {
   .App {
     background-size: contain;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
   }
-
   .btn_start {
-    position: relative;
-    top: 81vh;
+    cursor: default;
+    -webkit-tap-highlight-color: transparent !important;
   }
 }
