--- a/app/play/style.css
+++ b/app/play/style.css
@@ -6,6 +6,8 @@
 }
 
 .Play {
+  position: fixed;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,14 +18,15 @@
 
 @media (max-width: 500px) {
   .Play {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    background-size: contain;
   }
 }
 
 .timerContainer {
-  margin-top: 53px;
-  margin-bottom: 62px;
+  margin-top: 26px;
+  margin-bottom: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -48,7 +51,7 @@
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
   /*border: 1px solid whitesmoke;*/
-  margin-bottom: 50px;
+  margin-bottom: 40px;
 }
 
 .cell {
@@ -90,7 +93,7 @@
 
 .stack {
   width: 30px;
-  height: 300px;
+  height: 280px;
   background-color: #d9d9d9;
 }
 
@@ -99,9 +102,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 15px;
   width: 254px;
-  height: 300px;
+  height: 280px;
   background-color: #d9d9d9;
 }
 
