style: 행동 카드 리스트 이미지 추가

--- a/app/play/style.css
+++ b/app/play/style.css
@@ -110,9 +110,11 @@
 
 .cardList > div {
   display: flex;
+  align-items: center;
   font-family: "DNFBitBitOTF";
   font-size: 25px;
   font-weight: 400;
+  gap: 5px;
 }
 
 .actionCard {
