--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "DNFBitBitOTF";
+  src: url("/fonts/DNFBitBitOTF.otf");
+  font-weight: 400;
+  font-style: normal;
+}
+
 html,
 body {
   -webkit-touch-callout: none;
