--- a/app/play/style.css
+++ b/app/play/style.css
@@ -85,35 +85,50 @@
 }
 
 .stack {
-  width: 30px;
-  height: 280px;
-  background-color: #d9d9d9;
+  width: 38px;
+  height: 270px;
+  margin-top: 10px;
+  background-color: white;
+  border-radius: 10px;
 }
 
-.cardList {
+.cardList_background {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 15px;
-  width: 254px;
-  height: 280px;
-  background-color: #d9d9d9;
+  width: 240px;
+  height: 250px;
+  border-radius: 20px;
+  margin-top: 26px;
+  background-color: transparent;
+  background-image: url("/assets/img_card.svg");
 }
 
-.cardList > div {
+.cardList {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  font-family: "DNFBitBitOTF";
-  font-size: 25px;
-  font-weight: 400;
-  gap: 5px;
+  gap: 10px;
+  margin-top: 55px;
+}
+
+.img_card {
+  position: absolute;
 }
 
 .actionCard {
-  width: 226px;
-  height: 39px;
+  width: 204px;
+  height: 34px;
+  background-position: center;
+  background-size: cover;
   border-radius: 10px;
+  box-shadow: 2px 2px 2px 2px gray;
+}
+
+.actionCard:active {
+  box-shadow: none;
 }
 
 .U {
@@ -135,12 +150,37 @@
 .btn_container {
   display: flex;
   margin-top: 10px;
-  gap: 30px;
+  gap: 35px;
 }
 
+/*
 .btn_container > button {
   padding-left: 10px;
   padding-right: 10px;
+}*/
+
+.btn_reset {
+  width: 100px;
+  height: 40px;
+  background-image: url("/assets/btn_reset.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
+  border-radius: 7px;
+}
+
+.btn_run {
+  width: 100px;
+  height: 40px;
+  background-image: url("/assets/btn_start.svg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: transparent;
+  border: none;
 }
 
 /*success*/
