--- a/app/play/style.css
+++ b/app/play/style.css
@@ -95,12 +95,33 @@
   gap: 30px;
 }
 
-.stack {
+.stack_wrapper {
+  position: relative;
   width: 38px;
   height: 267px;
   margin-top: 10px;
   background-color: white;
   border-radius: 10px;
+  overflow-y: auto;
+}
+
+.stack {
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  bottom: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.img_fruit {
+  width: 25px;
+  height: 30px;
+}
+
+.mandarin {
+  height: 22px;
 }
 
 .cardList_background {
