fix: play 페이지 미디어쿼리 수정

--- a/app/play/style.css
+++ b/app/play/style.css
@@ -52,6 +52,14 @@
   margin-bottom: 35px;
 }
 
+@media (max-height: 700px) {
+  .mazeContainer {
+    width: 275px;
+    height: 240px;
+    background-size: contain;
+  }
+}
+
 .cell {
   display: flex;
   justify-content: center;
